-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 14.0.0-beta1
-
-
caa5c3947 (14.0)
This is probably due to an update in Xcode. The path for the downloaded device symbols changed again, so starting the debugger is slow.
A related issue is that the issue/warning that should appear in the Issues view doesn't not appear.
- relates to
-
QTCREATORBUG-29833 Fixed debugging experience
-
- Open
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-31044 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 567916,3 | iOS: Fix slow debugging with recent Xcode and iOS < 17 | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |